# book_watch

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/assets/: book_config.yaml
src/book/: main.py
src/book_watch/: config.py  main.py  paths.py
